--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "mern-stack-blog",
-  "type": "module",
+  "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "license": "MIT",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon --loader ts-node src/index.ts"
+    "dev": "nodemon",
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@trpc/client": "^11.5.0",
     "@trpc/server": "^11.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.18.0"
+    "yarn": "^1.22.22",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
 }
